@@ -19,6 +19,7 @@ Other contributors, listed alphabetically, are:
   * onlymostlydead
   * Paul Scott
   * Peter Leibiger
+  * Robert Pendell
   * Thorsten Möllers
 
 Many thanks for all contributions!
